--- a/app/src/main/res/layout/fragment_cooking_steps.xml
+++ b/app/src/main/res/layout/fragment_cooking_steps.xml
@@ -4,13 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.recipes.CookingStepsFragment">
 
-    <data>
-
-        <variable
-            name="viewModel"
-            type="piotr.michalkiewicz.mealplannerclient.view.recipes.viewmodel.RecipeViewModel" />
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -37,14 +30,7 @@
             app:layout_constraintBottom_toTopOf="@+id/cookingModeBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cookingStepsTV">
-
-            <LinearLayout
-                android:id="@+id/cookingStepsContainerLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </androidx.recyclerview.widget.RecyclerView>
+            app:layout_constraintTop_toBottomOf="@+id/cookingStepsTV" />
 
         <Button
             android:id="@+id/cookingModeBtn"
