--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -122,6 +122,7 @@
                     android:layout_weight="1"
                     android:enabled="false"
                     android:text="@string/cooking_steps"
+                    android:onClick="@{(v) -> viewModel.navigateToCookingSteps()}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/goToIngredientsBtn"
                     app:layout_constraintTop_toTopOf="@+id/goToIngredientsBtn" />
