--- a/app/src/main/res/layout/fragment_cooking_mode.xml
+++ b/app/src/main/res/layout/fragment_cooking_mode.xml
@@ -62,6 +62,7 @@
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="8dp"
             android:text="@string/previous"
+            android:onClick="@{(v) -> viewModel.goToPreviousStep()}"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline4" />
