--- a/app/src/main/res/layout/fragment_cooking_steps.xml
+++ b/app/src/main/res/layout/fragment_cooking_steps.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.recipes.CookingStepsFragment">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="piotr.michalkiewicz.mealplannerclient.view.recipes.viewmodel.RecipeViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -40,6 +47,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/cooking_mode"
+            android:onClick="@{(v) -> viewModel.navigateToCookingMode()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
