--- a/app/src/main/res/layout/fragment_cooking_mode.xml
+++ b/app/src/main/res/layout/fragment_cooking_mode.xml
@@ -17,34 +17,39 @@
             style="@style/bigPlainText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="2dp"
             android:text="@{String.valueOf(viewModel.currentCookingStep.stepNumber)}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@+id/cookingModeStepNrLabelTV"
+            app:layout_constraintStart_toEndOf="@+id/cookingModeStepNrLabelTV"
+            app:layout_constraintTop_toTopOf="@+id/cookingModeStepNrLabelTV" />
 
         <TextView
             android:id="@+id/cookingModeStepContentTV"
             style="@style/normalText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginEnd="8dp"
             android:text="@{String.valueOf(viewModel.currentCookingStep.stepInstruction)}"
             app:layout_constraintBottom_toTopOf="@+id/nextStepBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cookingModeStepNrTV" />
+            app:layout_constraintTop_toBottomOf="@+id/cookingModeStepNrTV"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/nextStepBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/next_step"
             android:onClick="@{(v) -> viewModel.goToNextStep()}"
+            android:text="@string/next_step"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline4" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -56,15 +61,41 @@
 
         <Button
             android:id="@+id/previousStepBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="2dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/previous"
             android:onClick="@{(v) -> viewModel.goToPreviousStep()}"
+            android:text="@string/previous"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline4" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline4"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/cookingModeStepNrLabelTV"
+            style="@style/bigPlainText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/step"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/cookingModeFinishBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/finish_cooking"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline4" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
