--- a/app/src/main/res/layout/fragment_cooking_mode.xml
+++ b/app/src/main/res/layout/fragment_cooking_mode.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="piotr.michalkiewicz.mealplannerclient.view.recipes.viewmodel.RecipeViewModel" />
+            type="piotr.michalkiewicz.mealplannerclient.view.recipes.viewmodel.RecipeSharedViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
