--- a/app/src/main/res/layout/fragment_cooking_steps.xml
+++ b/app/src/main/res/layout/fragment_cooking_steps.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="piotr.michalkiewicz.mealplannerclient.view.recipes.viewmodel.RecipeViewModel" />
+            type="piotr.michalkiewicz.mealplannerclient.view.recipes.viewmodel.RecipeSharedViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
