--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,7 +45,11 @@
         tools:layout="@layout/fragment_cookbook_screen">
         <action
             android:id="@+id/action_cookbookScreenFragment_to_recipeFragment"
-            app:destination="@id/recipeFragment" />
+            app:destination="@id/recipeNavGraph">
+            <argument
+                android:name="recipeId"
+                app:argType="string" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/shoppingListFragment"
@@ -275,36 +279,37 @@
                 app:argType="string" />
         </fragment>
     </navigation>
-    <fragment
-        android:id="@+id/recipeFragment"
-        android:name="piotr.michalkiewicz.mealplannerclient.view.recipes.RecipeFragment"
-        android:label="fragment_recipe"
-        tools:layout="@layout/fragment_recipe">
-        <argument
-            android:name="recipeId"
-            app:argType="string" />
-        <action
-            android:id="@+id/action_recipeFragment_to_ingredientsFragment"
-            app:destination="@id/ingredientsFragment" />
-        <action
-            android:id="@+id/action_recipeFragment_to_cookingStepsFragment"
-            app:destination="@id/cookingStepsFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/ingredientsFragment"
-        android:name="piotr.michalkiewicz.mealplannerclient.view.recipes.IngredientsFragment"
-        android:label="fragment_ingredients"
-        tools:layout="@layout/fragment_ingredients" />
-    <fragment
-        android:id="@+id/cookingStepsFragment"
-        android:name="piotr.michalkiewicz.mealplannerclient.view.recipes.CookingStepsFragment"
-        android:label="CookingStepsFragment">
-        <action
-            android:id="@+id/action_cookingStepsFragment_to_cookingModeFragment"
-            app:destination="@id/cookingModeFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/cookingModeFragment"
-        android:name="piotr.michalkiewicz.mealplannerclient.view.recipes.CookingModeFragment"
-        android:label="CookingModeFragment" />
+    <navigation
+        android:id="@+id/recipeNavGraph"
+        app:startDestination="@id/recipeFragment">
+        <fragment
+            android:id="@+id/cookingModeFragment"
+            android:name="piotr.michalkiewicz.mealplannerclient.view.recipes.CookingModeFragment"
+            android:label="CookingModeFragment" />
+        <fragment
+            android:id="@+id/cookingStepsFragment"
+            android:name="piotr.michalkiewicz.mealplannerclient.view.recipes.CookingStepsFragment"
+            android:label="CookingStepsFragment">
+            <action
+                android:id="@+id/action_cookingStepsFragment_to_cookingModeFragment"
+                app:destination="@id/cookingModeFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/ingredientsFragment"
+            android:name="piotr.michalkiewicz.mealplannerclient.view.recipes.IngredientsFragment"
+            android:label="fragment_ingredients"
+            tools:layout="@layout/fragment_ingredients" />
+        <fragment
+            android:id="@+id/recipeFragment"
+            android:name="piotr.michalkiewicz.mealplannerclient.view.recipes.RecipeFragment"
+            android:label="fragment_recipe"
+            tools:layout="@layout/fragment_recipe">
+            <action
+                android:id="@+id/action_recipeFragment_to_ingredientsFragment"
+                app:destination="@id/ingredientsFragment" />
+            <action
+                android:id="@+id/action_recipeFragment_to_cookingStepsFragment"
+                app:destination="@id/cookingStepsFragment" />
+        </fragment>
+    </navigation>
 </navigation>
