--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -25,8 +25,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recipeIngredientsListRV"
+        <ListView
+            android:id="@+id/recipeIngredientsListView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
